# ai-restaurant-ordering

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NEXT_STEPS.md  PHASE3_GAPS.md  QWEN.md  README.md  SESSION_FEEDBACK_IMPLEMENTATION_PLAN.md  SYSTEM_DESIGN.md  VALIDATION_REPORT.md  docker-compose.monitoring.yml  pyproject.toml
data/sample/: bailey_normalized.json  chicken_normalized.json  pad_thai_normalized.json  qdoba_normalized.json  restaurant-schema.json
deployment/: DEPLOYMENT_GUIDE.md  Dockerfile.mock  Dockerfile.ui  docker-compose.monitoring.yml  docker-compose.yml  init-pgvector.sql  nginx.conf  start_services.sh
deployment/monitoring/: alerting_rules.yml  prometheus.yml
docker/: Dockerfile  docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: CODE_FLOW.md  DEVELOPER_GUIDE.md  DOCS_SUMMARY.md  DOCUMENTATION_INDEX.md  FUNCTION_MAP.md  MONITORING_IMPLEMENTATION.md  NEO4J_DESIGN.md  feature-monitoring.md
docs/diagrams/: 01-system-context.excalidraw  02-container-diagram.excalidraw  03-langgraph-pipeline.excalidraw  04-erd.excalidraw  05-deployment-diagram.excalidraw
mocks/: __init__.py  data_generator.py  scenarios.py  server.py
scripts/: ingest_neo4j.py  run_ingestion.py  start_services.sh
src/: __init__.py  metrics.py
src/api/: __init__.py  main.py
src/config/: logging.py  settings.py
src/ingestion/: __init__.py  embeddings.py  indexer.py  neo4j_indexer.py  pipeline.py  transformer.py
src/langgraph/: __init__.py  graph.py  nodes.py  prompts.py
tests/: __init__.py
ui/: README.md  package.json  tailwind.config.js  ui-flow.puml
(+56 files in other folders)
