[project]
name = "hybrid-search-v2"
version = "0.1.0"
description = "Conversational Hybrid Search & RAG System for Catering Menus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM & RAG
    "openai>=1.12.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",

    # Vector & Search
    "opensearch-py>=2.4.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",

    # Session & Cache
    "redis>=5.0.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Data Processing
    "faker>=22.0.0",
    "jsonschema>=4.21.0",

    # Utilities
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
